@@ -1284,13 +1284,13 @@ class Group extends Error {
 		//	else - restricted.
 		//
 		if ($cvs_flags>1) {
-			if (!sf_ldap_user_set_attribute($user_id,"debSfCvsShell","/bin/bash")) {
+			if (!sf_ldap_user_set_attribute($user_id,"debGforgeCvsShell","/bin/bash")) {
 				$this->setError(sf_ldap_get_error_msg());
 				db_rollback();
 				return false;
 			}
 		} else {
-			if (!sf_ldap_user_set_attribute($user_id,"debSfCvsShell","/bin/cvssh")) {
+			if (!sf_ldap_user_set_attribute($user_id,"debGforgeCvsShell","/bin/cvssh")) {
 				$this->setError(sf_ldap_get_error_msg());
 				db_rollback();
 				return false;
